# ymusic-desktop

./: .firebaserc  .gitignore  README.md  index.html  package-lock.json  package.json
src/: main.ts  player.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/services/: config.ts  gdrive.ts  gemini.ts  music.ts
