[package]
name = "ymusic-desktop"
version = "0.1.0"
description = "yMusic Desktop Player"
authors = ["gorach80"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
