[package]
name = "ymusic-desktop"
version = "0.1.0"
description = "yMusic Desktop Player"
authors = ["gorach80"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.8" }

[dependencies]
tauri = { version = "1.8", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `force-path-custom-protocol` is enabled
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
